# simple-package-tracker

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs
data/: simple-package-tracker.desktop  simple-package-tracker.metainfo.xml
data/resources/: resources.gresource.xml
flatpak/: manifest.json
resources/: resources.gresource.xml
src/: api.rs  home_page.rs  main.rs  storage.rs
src/api/: models.rs  rate_limiter.rs  tracking.rs
src/details_page/: details.rs
src/home_page/: tracking_input.rs  tracking_list.rs
src/storage/: mod.rs
src/ui/: header.rs  input.rs  layout.rs  mod.rs  tracker.rs
src/ui/tracking/: mod.rs  package_details.rs  tracker.rs
