[package]
name = "simple-package-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
adw = { version = "0.7.2", package = "libadwaita", features = ["v1_6"] }
directories = "6.0.0"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["full", "macros"] }
thiserror = "2.0.12"
chrono = { version = "0.4.41", features = ["serde"] }
open = "5.3.2"

[build-dependencies]
glib-build-tools = "0.20.0"
